--- a/utils/collect_all_glue.ipynb
+++ b/utils/collect_all_glue.ipynb
@@ -8,16 +8,25 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import subprocess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_03_12_2022_18:32:31\"\n",
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/gpt2_random_fixed_13_01_2023_08.07.20\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for step in range(50000, 550000, 50000):\n",
     "    model_path=f\"{main_model_dir}/step_{step}\"\n",
     "    try:\n",
@@ -44,17 +53,16 @@
     "        data.loc[\"decrement_max\"]=[np.nan for i in range(9)]\n",
     "        data.to_csv(f\"{model_path}/glue_results.csv\")\n",
     "    except Exception as e:\n",
-    "        print(f\"step-{step}: {str(e)}\")"
+    "        print(f\"step-{step},{run},{task}: {str(e)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_03_12_2022_18:32:31\"\n",
-    "for step in range(50000, 550000, 50000):\n",
+    "for step in range(50000, 300000, 50000):\n",
     "    for run in range(1, 21):\n",
     "        if run>5:\n",
     "            tasks=[\"cola\", \"mrpc\", \"rte\", \"stsb\"]\n",
@@ -69,139 +77,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 cola\n",
-      "1 mrpc\n",
-      "1 rte\n",
-      "1 stsb\n",
-      "1 sst2\n",
-      "1 mnli\n",
-      "1 qnli\n",
-      "1 qqp\n",
-      "2 cola\n",
-      "2 mrpc\n",
-      "2 rte\n",
-      "2 stsb\n",
-      "2 sst2\n",
-      "2 mnli\n",
-      "2 qnli\n",
-      "2 qqp\n",
-      "3 cola\n",
-      "3 mrpc\n",
-      "3 rte\n",
-      "3 stsb\n",
-      "3 sst2\n",
-      "3 mnli\n",
-      "3 qnli\n",
-      "3 qqp\n",
-      "4 cola\n",
-      "4 mrpc\n",
-      "4 rte\n",
-      "4 stsb\n",
-      "4 sst2\n",
-      "4 mnli\n",
-      "4 qnli\n",
-      "4 qqp\n",
-      "5 cola\n",
-      "5 mrpc\n",
-      "5 rte\n",
-      "5 stsb\n",
-      "5 sst2\n",
-      "5 mnli\n",
-      "5 qnli\n",
-      "5 qqp\n",
-      "6 cola\n",
-      "6 mrpc\n",
-      "6 rte\n",
-      "6 stsb\n",
-      "7 cola\n",
-      "7 mrpc\n",
-      "7 rte\n",
-      "7 stsb\n",
-      "8 cola\n",
-      "8 mrpc\n",
-      "8 rte\n",
-      "8 stsb\n",
-      "9 cola\n",
-      "9 mrpc\n",
-      "9 rte\n",
-      "9 stsb\n",
-      "10 cola\n",
-      "10 mrpc\n",
-      "10 rte\n",
-      "10 stsb\n",
-      "11 cola\n",
-      "11 mrpc\n",
-      "11 rte\n",
-      "11 stsb\n",
-      "12 cola\n",
-      "12 mrpc\n",
-      "12 rte\n",
-      "12 stsb\n",
-      "13 cola\n",
-      "13 mrpc\n",
-      "13 rte\n",
-      "13 stsb\n",
-      "14 cola\n",
-      "14 mrpc\n",
-      "14 rte\n",
-      "14 stsb\n",
-      "15 cola\n",
-      "15 mrpc\n",
-      "15 rte\n",
-      "15 stsb\n",
-      "16 cola\n",
-      "16 mrpc\n",
-      "16 rte\n",
-      "16 stsb\n",
-      "17 cola\n",
-      "17 mrpc\n",
-      "17 rte\n",
-      "17 stsb\n",
-      "18 cola\n",
-      "18 mrpc\n",
-      "18 rte\n",
-      "18 stsb\n",
-      "19 cola\n",
-      "19 mrpc\n",
-      "19 rte\n",
-      "19 stsb\n",
-      "20 cola\n",
-      "20 mrpc\n",
-      "20 rte\n",
-      "20 stsb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_path=f\"/home/hrenduchinta/LM-pretraining/models/fl_bert_23_11_2022_06:34:28/step_250000\"\n",
-    "data=pd.DataFrame(columns=[\"cola\", \"mrpc\", \"rte\", \"stsb\", \"sst2\", \"mnli-m\", \"mnli-mm\", \"qnli\", \"qqp\"], index=[f\"glue_run_{i}\" for i in range(1, 21)])\n",
-    "for run in range(1, 21):\n",
-    "    if run>5:\n",
-    "        tasks=[\"cola\", \"mrpc\", \"rte\", \"stsb\"]\n",
-    "    else:\n",
-    "        tasks=[\"cola\", \"mrpc\", \"rte\", \"stsb\", \"sst2\", \"mnli\", \"qnli\", \"qqp\"]\n",
-    "    l=[]\n",
-    "    for task in tasks:\n",
-    "        print(run, task)\n",
-    "        with open(f\"{model_path}/glue_run_{run}/{task}.log\", \"r\") as f:\n",
-    "            lines=f.readlines()\n",
-    "            if task==\"mnli\":\n",
-    "                l.append(100*float(lines[-2].split()[-1].rstrip().rstrip('}')))\n",
-    "            l.append(100*float(lines[-1].split()[-1].rstrip().rstrip('}')))\n",
-    "    if run>5:\n",
-    "        l.extend([np.nan]*5)\n",
-    "    data.loc[f\"glue_run_{run}\"]=l\n",
-    "data.loc[\"average\"]=data.mean(axis=0, skipna=True)\n",
-    "data.loc[\"stddev\"]=data.std(axis=0, skipna=True)\n",
-    "data.loc[\"decrement_avg\"]=[np.nan for i in range(9)]\n",
-    "data.loc[\"maximum\"]=data.max(axis=0, skipna=True)\n",
-    "data.loc[\"decrement_max\"]=[np.nan for i in range(9)]\n",
-    "data.to_csv(f\"{model_path}/glue_results.csv\")"
+    "model_dir=main_model_dir\n",
+    "os.makedirs(f\"{model_dir}/results\", exist_ok=True)\n",
+    "for step in range(50000, 550000, 50000):\n",
+    "    os.makedirs(f\"{model_dir}/results/step_{step}\", exist_ok=True)\n",
+    "    subprocess.run(f\"cp {model_dir}/step_{step}/glue_results.csv {model_dir}/results/step_{step}/glue_results.csv\", shell=True)"
    ]
   },
   {
@@ -214,7 +96,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.12 ('ingenious-env': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -228,12 +110,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12 | packaged by conda-forge | (default, Oct 26 2021, 06:08:53) \n[GCC 9.4.0]"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:58:50) \n[GCC 10.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "13ad8c38ecb90713c33d78b40c599973b0f7cdda47714d00efe1ed11a1ec8108"
+    "hash": "330e453a0b5d4a31de1248b81498e4f7229811b6cdc584e51aea2376965a21af"
    }
   }
  },
