--- a/utils/collect_all_superglue.ipynb
+++ b/utils/collect_all_superglue.ipynb
@@ -9,16 +9,37 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "import subprocess\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/gpt2_ingenious_09_01_2023_10.22.38\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step-50000: [Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/models/gpt2_ingenious_09_01_2023_10.22.38/step_50000/superglue_run_1/runs/cb/val_metrics.json'\n",
+      "step-100000: [Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/models/gpt2_ingenious_09_01_2023_10.22.38/step_100000/superglue_run_1/runs/cb/val_metrics.json'\n",
+      "step-150000: [Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/models/gpt2_ingenious_09_01_2023_10.22.38/step_150000/superglue_run_1/runs/cb/val_metrics.json'\n",
+      "step-200000: [Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/models/gpt2_ingenious_09_01_2023_10.22.38/step_200000/superglue_run_1/runs/cb/val_metrics.json'\n",
+      "step-250000: [Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/models/gpt2_ingenious_09_01_2023_10.22.38/step_250000/superglue_run_1/runs/cb/val_metrics.json'\n"
+     ]
+    }
+   ],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_07_10_2022_05:55:01\"\n",
     "for step in range(50000, 300000, 50000):\n",
     "    model_path=f\"{main_model_dir}/step_{step}\"\n",
     "    try:\n",
@@ -50,16 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (69445799.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [4], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:``\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_without_warmstart_bert_11_06_2022_17:53:56\"\n",
     "for step in range(50000, 300000, 50000):\n",
     "    for run in range(1, 21):\n",
     "        if run>5:\n",
     "            tasks=[\"cb\", \"copa\", \"wsc\"]\n",
-    "        else:\n",
+    "        else:``\n",
     "            tasks=[\"cb\", \"copa\", \"wsc\", \"boolq\", \"multirc\", \"wic\"]\n",
     "        for task in tasks:\n",
     "            if not os.path.isfile(f\"{main_model_dir}/step_{step}/superglue_run_{run}/runs/{task}/val_metrics.json\"):\n",
@@ -68,98 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "from statistics import mean, stdev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l=[]\n",
-    "for i in range(1,21):\n",
-    "    with open(f\"/home/hrenduchinta/LM-pretraining/models/regular_bert/test_superglue_run_{i}/runs/cb/val_metrics.json\", \"r\") as f:\n",
-    "        d=json.load(f)\n",
-    "        l.append(100*d[\"cb\"][\"metrics\"][\"minor\"][\"avg_f1\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(74.88759057452789, 2.4532846869924643)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean(l), stdev(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l=[]\n",
-    "for i in range(1,6):\n",
-    "    with open(f\"/home/hrenduchinta/LM-pretraining/models/regular_bert/test_superglue_run_{i}/runs/copa/val_metrics.json\", \"r\") as f:\n",
-    "        d=json.load(f)\n",
-    "        l.append(100*d[\"copa\"][\"metrics\"][\"minor\"][\"acc\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(67.8, 3.3466401061363023)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean(l), stdev(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[70.0, 62.0, 68.0, 70.0, 69.0]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
+    "model_dir=main_model_dir\n",
+    "os.makedirs(f\"{model_dir}/results\", exist_ok=True)\n",
+    "for step in range(50000, 300000, 50000):\n",
+    "    os.makedirs(f\"{model_dir}/results/step_{step}\", exist_ok=True)\n",
+    "    subprocess.run(f\"cp {model_dir}/step_{step}/superglue_results.csv {model_dir}/results/step_{step}/superglue_results.csv\", shell=True)"
    ]
   },
   {
@@ -172,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.12 ('ingenious-env': venv)",
+   "display_name": "ingenious",
    "language": "python",
    "name": "python3"
   },
@@ -186,12 +132,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.12 | packaged by conda-forge | (default, Oct 26 2021, 06:08:21) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "13ad8c38ecb90713c33d78b40c599973b0f7cdda47714d00efe1ed11a1ec8108"
+    "hash": "330e453a0b5d4a31de1248b81498e4f7229811b6cdc584e51aea2376965a21af"
    }
   }
  },
