--- a/utils/subset-analysis.ipynb
+++ b/utils/subset-analysis.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hrenduchinta/LM-pretraining/ingenious-env/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,210 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▏   | 28/45 [02:47<00:34,  2.03s/it]"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/subsets/fl_bert_12_09_2022_15:35:34/subset_indices_after_step_81140.pt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m folder\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m/home/hrenduchinta/LM-pretraining/subsets/fl_bert_12_09_2022_15:35:34/\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m df\u001b[39m=\u001b[39manalyse_subsets(folder)\n\u001b[1;32m      3\u001b[0m df\u001b[39m.\u001b[39mto_csv(folder\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39manalysis.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m df\n",
+      "Cell \u001b[0;32mIn [7], line 6\u001b[0m, in \u001b[0;36manalyse_subsets\u001b[0;34m(folder)\u001b[0m\n\u001b[1;32m      4\u001b[0m idx\u001b[39m.\u001b[39mextend(\u001b[39mlist\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39m100000\u001b[39m, \u001b[39m250000\u001b[39m, \u001b[39m25000\u001b[39m)))\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m idx:\n\u001b[0;32m----> 6\u001b[0m     subsets\u001b[39m.\u001b[39mappend(\u001b[39mset\u001b[39m(torch\u001b[39m.\u001b[39;49mload(folder\u001b[39m+\u001b[39;49m\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39msubset_indices_after_step_\u001b[39;49m\u001b[39m{\u001b[39;49;00mi\u001b[39m}\u001b[39;49;00m\u001b[39m.pt\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39mtolist()))\n\u001b[1;32m      7\u001b[0m df\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mDataFrame()\n\u001b[1;32m      8\u001b[0m df[\u001b[39m\"\u001b[39m\u001b[39msubsets\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m=\u001b[39m[\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m idx]\n",
+      "File \u001b[0;32m/opt/conda/envs/ingenious/lib/python3.9/site-packages/torch/serialization.py:699\u001b[0m, in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, **pickle_load_args)\u001b[0m\n\u001b[1;32m    696\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m pickle_load_args\u001b[39m.\u001b[39mkeys():\n\u001b[1;32m    697\u001b[0m     pickle_load_args[\u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m--> 699\u001b[0m \u001b[39mwith\u001b[39;00m _open_file_like(f, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m opened_file:\n\u001b[1;32m    700\u001b[0m     \u001b[39mif\u001b[39;00m _is_zipfile(opened_file):\n\u001b[1;32m    701\u001b[0m         \u001b[39m# The zipfile reader is going to advance the current file position.\u001b[39;00m\n\u001b[1;32m    702\u001b[0m         \u001b[39m# If we want to actually tail call to torch.jit.load, we need to\u001b[39;00m\n\u001b[1;32m    703\u001b[0m         \u001b[39m# reset back to the original position.\u001b[39;00m\n\u001b[1;32m    704\u001b[0m         orig_position \u001b[39m=\u001b[39m opened_file\u001b[39m.\u001b[39mtell()\n",
+      "File \u001b[0;32m/opt/conda/envs/ingenious/lib/python3.9/site-packages/torch/serialization.py:231\u001b[0m, in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_open_file_like\u001b[39m(name_or_buffer, mode):\n\u001b[1;32m    230\u001b[0m     \u001b[39mif\u001b[39;00m _is_path(name_or_buffer):\n\u001b[0;32m--> 231\u001b[0m         \u001b[39mreturn\u001b[39;00m _open_file(name_or_buffer, mode)\n\u001b[1;32m    232\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    233\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m mode:\n",
+      "File \u001b[0;32m/opt/conda/envs/ingenious/lib/python3.9/site-packages/torch/serialization.py:212\u001b[0m, in \u001b[0;36m_open_file.__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, name, mode):\n\u001b[0;32m--> 212\u001b[0m     \u001b[39msuper\u001b[39m(_open_file, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\u001b[39mopen\u001b[39;49m(name, mode))\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/subsets/fl_bert_12_09_2022_15:35:34/subset_indices_after_step_81140.pt'"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Union\n",
-      "[10385855, 17916840, 23584611, 27871447, 31125718, 33599256, 35482328]\n",
-      "Intersection\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▏   | 28/45 [05:52<03:34, 12.60s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10385855, 2854870, 992186, 510237, 369616, 319810, 296475]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>81140</th>\n",
-       "      <th>100000</th>\n",
-       "      <th>125000</th>\n",
-       "      <th>150000</th>\n",
-       "      <th>175000</th>\n",
-       "      <th>200000</th>\n",
-       "      <th>225000</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subsets</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>81140</th>\n",
-       "      <td>10385855</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100000</th>\n",
-       "      <td>2854870</td>\n",
-       "      <td>10385855</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125000</th>\n",
-       "      <td>2854926</td>\n",
-       "      <td>2855344</td>\n",
-       "      <td>10385855</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150000</th>\n",
-       "      <td>2856410</td>\n",
-       "      <td>2857004</td>\n",
-       "      <td>2859300</td>\n",
-       "      <td>10385855</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175000</th>\n",
-       "      <td>2855821</td>\n",
-       "      <td>2854843</td>\n",
-       "      <td>2856270</td>\n",
-       "      <td>2857275</td>\n",
-       "      <td>10385855</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200000</th>\n",
-       "      <td>2853996</td>\n",
-       "      <td>2859412</td>\n",
-       "      <td>2856602</td>\n",
-       "      <td>2857142</td>\n",
-       "      <td>2855164</td>\n",
-       "      <td>10385855</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225000</th>\n",
-       "      <td>2854697</td>\n",
-       "      <td>2855403</td>\n",
-       "      <td>2854904</td>\n",
-       "      <td>2855523</td>\n",
-       "      <td>2853962</td>\n",
-       "      <td>2855647</td>\n",
-       "      <td>10385855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>union</th>\n",
-       "      <td>10385855</td>\n",
-       "      <td>17916840</td>\n",
-       "      <td>23584611</td>\n",
-       "      <td>27871447</td>\n",
-       "      <td>31125718</td>\n",
-       "      <td>33599256</td>\n",
-       "      <td>35482328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>intersection</th>\n",
-       "      <td>10385855</td>\n",
-       "      <td>2854870</td>\n",
-       "      <td>992186</td>\n",
-       "      <td>510237</td>\n",
-       "      <td>369616</td>\n",
-       "      <td>319810</td>\n",
-       "      <td>296475</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 81140    100000    125000    150000    175000    200000  \\\n",
-       "subsets                                                                    \n",
-       "81140         10385855         0         0         0         0         0   \n",
-       "100000         2854870  10385855         0         0         0         0   \n",
-       "125000         2854926   2855344  10385855         0         0         0   \n",
-       "150000         2856410   2857004   2859300  10385855         0         0   \n",
-       "175000         2855821   2854843   2856270   2857275  10385855         0   \n",
-       "200000         2853996   2859412   2856602   2857142   2855164  10385855   \n",
-       "225000         2854697   2855403   2854904   2855523   2853962   2855647   \n",
-       "union         10385855  17916840  23584611  27871447  31125718  33599256   \n",
-       "intersection  10385855   2854870    992186    510237    369616    319810   \n",
-       "\n",
-       "                225000  \n",
-       "subsets                 \n",
-       "81140                0  \n",
-       "100000               0  \n",
-       "125000               0  \n",
-       "150000               0  \n",
-       "175000               0  \n",
-       "200000               0  \n",
-       "225000        10385855  \n",
-       "union         35482328  \n",
-       "intersection    296475  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -573,6 +377,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/ingenious/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder=\"/home/hrenduchinta/LM-pretraining/subsets/fl_bert_23_12_2022_02:38:00\"\n",
+    "steps=list(range(0, 100000, 10000))\n",
+    "steps=[81140]+list(range(100000, 500000, 25000))\n",
+    "subsets=[]\n",
+    "for step in steps:\n",
+    "    subsets.append(set(torch.load(f\"{folder}/subset_indices_after_step_{step}.pt\").tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10385855\n",
+      "2763654\n",
+      "868027\n",
+      "380348\n",
+      "244379\n",
+      "199994\n",
+      "181458\n",
+      "170933\n",
+      "163760\n",
+      "158261\n",
+      "153755\n",
+      "150051\n",
+      "146962\n",
+      "144289\n",
+      "141728\n",
+      "139652\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    print(len(s))\n",
+    "    s=s.intersection(subsets[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2763654\n",
+      "2765053\n",
+      "2765113\n",
+      "2765753\n",
+      "2764397\n",
+      "2763983\n",
+      "2763976\n",
+      "2766443\n",
+      "2764223\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=subsets[0]\n",
+    "for i in range(1, 10):\n",
+    "    print(len(subsets[0].intersection(subsets[i])))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -581,7 +479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.12 ('ingenious-env': venv)",
+   "display_name": "ingenious-env",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.12 | packaged by conda-forge | (default, Oct 26 2021, 06:08:53) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
